# erd_drawio

./: .gitignore  .pre-commit-config.yaml  .python-version  LICENSE  Makefile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml  run.py  run_generator.py  run_table_locator.py  watcher.py
.github/workflows/: test.yml
src/create_drawio/: drawio_generator.py
src/drawio_tools/: drawio_generator.py  drawio_table_locator.py  styles.py
tests/drawio_tools/: test_drawio_generator.py
